# aspect-ratio-c

./: .gitignore  CMakeLists.txt  README.md  install  install-mac  toaspectratio.cbp  toaspectratio.depend  toaspectratio.layout
includes/: aspectratio.h
src/: checkaspectratio.c  to_number.c  toaspectratio.c
